--- a/frontend/src/app/@theme/styles/themes.scss
+++ b/frontend/src/app/@theme/styles/themes.scss
@@ -2,6 +2,9 @@
 @import '~@nebular/theme/styles/theming';
 // @nebular out of the box themes
 @import '~@nebular/theme/styles/themes';
+@import './pace.theme';
+@import './custom.theme';
+
 
 $nb-enable-css-custom-properties: true; // <-- enable css custom properties
 
