--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card style="height: max-content;">
   <nb-card-header class="h3">
     {{ 'general.menu.map_records' | translate }}
     <button *ngIf="test" style="float: right" nbButton appearance="outline" shape="semi-round" size="tiny" status="info"
@@ -10,11 +10,11 @@
   <nb-card-body>
     <div class="g-0 row mb-2">
       <div class="col-6 col-md-6 text-left">
-        <button nbButton class="" shape="rectangle" size="medium" status="primary" (click)="addNew()">
+        <button nbButton class="" shape="rectangle" size="medium" status="success" (click)="addNew()">
           <i class="material-icons">add</i>&nbsp;{{ 'general.dmm.add_record' | translate }}
         </button>
         &nbsp;
-        <button nbButton class="" shape="rectangle" size="medium" status="primary" (click)="ngOnInit()">
+        <button nbButton class="" shape="rectangle" size="medium" status="info" (click)="ngOnInit()">
           <i class="material-icons">refresh</i>
           &nbsp; refresh
         </button>
