barra header bianco/bianco beige con scritta grigia come colore di sfondo della pagina principale, provare una sfumatura di azzurro un po' piu chiara del menu (fatto ma non ci è piaciuta e abbiamo optato per bianco) provare ad eliminare la card e fare lo sfondo semplicemente bianco/bianco beige mettere la select per cambiare il tema le select farle sempre bianco/bianco beige

--- a/frontend/src/app/@theme/styles/styles.scss
+++ b/frontend/src/app/@theme/styles/styles.scss
@@ -682,7 +682,20 @@ table.custom-table thead {
   background-color: #00ff95 !important;
 }
 
-body ngx-app ngx-pages ngx-one-column-layout nb-layout nb-layout-column {
-  background-color: #E0DDCF !important;
-  color: #003344 !important;
+/*body ngx-app ngx-pages ngx-one-column-layout nb-layout nb-layout-column {
+  background-color: #1900ff !important;
+  color: #ffffff !important;
+}*/
+
+:root {
+  --main-bg-color: #ffffff;
+  --main-text-color: #000000;
 }
+
+body ngx-app ngx-pages ngx-one-column-layout nb-layout nb-layout-column {
+  background-color: var(--main-bg-color)!important;
+  color: var(--main-text-color)!important;
+}
+
+
+
