--- a/frontend/src/app/@theme/styles/themes.scss
+++ b/frontend/src/app/@theme/styles/themes.scss
@@ -4,6 +4,7 @@
 @import '~@nebular/theme/styles/themes';
 @import './pace.theme';
 @import './custom.theme';
+@import './custom2.theme';
 
 
 $nb-enable-css-custom-properties: true; // <-- enable css custom properties
