--- a/frontend/src/app/@theme/styles/custom2.theme.scss
+++ b/frontend/src/app/@theme/styles/custom2.theme.scss
@@ -45,7 +45,7 @@ $nb-themes: nb-register-theme(( // Palette colori principali
       table-row-selected-hover-background-color: #81d4fa,
       table-header-background-color: #42A5F5, // colore della riga header (quella grigia)
       table-header-text-color: #ffffff,
-      color-primary-400: #42a5f5,
+      color-primary-400: #A5CA70,
       /*
       slide-out-background: linear-gradient(270deg, #222b45 0%, #151a30 100%),
       slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
