--- a/frontend/src/app/pages/data-model-mapper/dmm.component.scss
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.scss
@@ -42,3 +42,12 @@ code {
 .control-status-example {
   color: nb-theme(color-basic-100);
 }
+
+.pad {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+.row {
+  margin-top: 20px;
+}
