--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -80,7 +80,10 @@
 
       <!-- SVG per connessioni (gestito da TS) -->
       <svg #connectionsSvg id="connections" width="100%" height="100%"
-        style="position:absolute; top:0; left:0; pointer-events:none; z-index:0;"></svg>
+        style="position:absolute; top:0; left:0; pointer-events:none; z-index:0; stroke: #3b82f6;
+  stroke-width: 2;
+  fill: none;
+  marker-end: url(#arrow);"></svg>
     </div>
   </div>
 
